Modify the structure of the algorithm

--- a/Plots_Material/Plotting_Values.ipynb
+++ b/Plots_Material/Plotting_Values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "626eef79",
    "metadata": {},
    "outputs": [],
@@ -18,13 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
+   "id": "6738b7e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/ange-clementakazan/Documents/Github_HS3F/Sequential FeatureForestFlow/Plots_Material'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b0660b17",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Parent directory for the imports\n",
-    "Parent=\"/Users/ange-clementakazan/Documents/Copy_of_Project/Metrics_Plots_Material/\" # Change this to your own directory\n",
+    "Parent=\"/Users/ange-clementakazan/Documents/Github_HS3F/Sequential FeatureForestFlow/Plots_Material/\" # Change this to your own directory\n",
     "#HS3F_Rg4\n",
     "data_Rg4=pd.read_csv(\"HS3F_Rg4_Results.csv\")\n",
     "#HS3F_Euler\n",
@@ -280,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "08e49efb",
    "metadata": {},
    "outputs": [],
@@ -294,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "cafcbb3e",
    "metadata": {},
    "outputs": [],
@@ -310,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "29303f55",
    "metadata": {},
    "outputs": [],
@@ -332,10 +354,10 @@
     "}\n",
     "def conditional_mean(column, condition):\n",
     "    if condition is not None:\n",
-    "        return round(column[condition(column)].mean(),3) #({round(column.std(), 2)})\n",
+    "        return round(column[condition(column)].mean(),6) #({round(column.std(), 2)})\n",
     "    else:\n",
     "\n",
-    "        return round(column.mean(),3)#({round(column.std(),2)})\n",
+    "        return round(column.mean(),6)#({round(column.std(),2)})\n",
     "# Extract numerical columns\n",
     "numeric_cols = data_FF.select_dtypes(include=['number']).columns\n",
     "#### Mean per column names #####\n",
@@ -353,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "04ef942f",
    "metadata": {},
    "outputs": [
@@ -394,95 +416,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>HS3F_Euler_Avg</th>\n",
-       "      <td>1.283</td>\n",
-       "      <td>1.949</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.580</td>\n",
-       "      <td>0.668</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.738</td>\n",
-       "      <td>0.774</td>\n",
-       "      <td>0.787</td>\n",
-       "      <td>0.846</td>\n",
-       "      <td>278.425</td>\n",
+       "      <td>1.282962</td>\n",
+       "      <td>1.949359</td>\n",
+       "      <td>0.666715</td>\n",
+       "      <td>0.579684</td>\n",
+       "      <td>0.667544</td>\n",
+       "      <td>0.772106</td>\n",
+       "      <td>0.738038</td>\n",
+       "      <td>0.774297</td>\n",
+       "      <td>0.786984</td>\n",
+       "      <td>0.846256</td>\n",
+       "      <td>278.424878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CS3F_Euler_Avg</th>\n",
-       "      <td>1.349</td>\n",
-       "      <td>1.980</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.580</td>\n",
-       "      <td>0.668</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.724</td>\n",
-       "      <td>0.766</td>\n",
-       "      <td>0.783</td>\n",
-       "      <td>0.863</td>\n",
-       "      <td>262.556</td>\n",
+       "      <td>1.348864</td>\n",
+       "      <td>1.979609</td>\n",
+       "      <td>0.666715</td>\n",
+       "      <td>0.579684</td>\n",
+       "      <td>0.667544</td>\n",
+       "      <td>0.772106</td>\n",
+       "      <td>0.723865</td>\n",
+       "      <td>0.765855</td>\n",
+       "      <td>0.783463</td>\n",
+       "      <td>0.863356</td>\n",
+       "      <td>262.555560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HS3F_Rg4_Avg</th>\n",
-       "      <td>1.233</td>\n",
-       "      <td>1.903</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.592</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.741</td>\n",
-       "      <td>0.773</td>\n",
-       "      <td>0.819</td>\n",
-       "      <td>0.861</td>\n",
-       "      <td>331.058</td>\n",
+       "      <td>1.232536</td>\n",
+       "      <td>1.903448</td>\n",
+       "      <td>0.666715</td>\n",
+       "      <td>0.591794</td>\n",
+       "      <td>0.672308</td>\n",
+       "      <td>0.772106</td>\n",
+       "      <td>0.740811</td>\n",
+       "      <td>0.772581</td>\n",
+       "      <td>0.819293</td>\n",
+       "      <td>0.860820</td>\n",
+       "      <td>331.058229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CS3F_Rg4_Avg</th>\n",
-       "      <td>1.405</td>\n",
-       "      <td>1.997</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.592</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.712</td>\n",
-       "      <td>0.760</td>\n",
-       "      <td>0.786</td>\n",
-       "      <td>0.867</td>\n",
-       "      <td>332.877</td>\n",
+       "      <td>1.405455</td>\n",
+       "      <td>1.996807</td>\n",
+       "      <td>0.666715</td>\n",
+       "      <td>0.591794</td>\n",
+       "      <td>0.672308</td>\n",
+       "      <td>0.772106</td>\n",
+       "      <td>0.711943</td>\n",
+       "      <td>0.759726</td>\n",
+       "      <td>0.785699</td>\n",
+       "      <td>0.866885</td>\n",
+       "      <td>332.876717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Forest Flow_Avg</th>\n",
-       "      <td>1.356</td>\n",
-       "      <td>1.898</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.606</td>\n",
-       "      <td>0.665</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.723</td>\n",
-       "      <td>0.766</td>\n",
-       "      <td>0.839</td>\n",
-       "      <td>0.894</td>\n",
-       "      <td>1073.766</td>\n",
+       "      <td>1.355969</td>\n",
+       "      <td>1.897578</td>\n",
+       "      <td>0.666715</td>\n",
+       "      <td>0.606008</td>\n",
+       "      <td>0.664661</td>\n",
+       "      <td>0.771905</td>\n",
+       "      <td>0.722838</td>\n",
+       "      <td>0.766319</td>\n",
+       "      <td>0.838825</td>\n",
+       "      <td>0.894352</td>\n",
+       "      <td>1073.765880</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 W_train  W_test  R2_real  R2_fake  R2_comb  F1_real  F1_fake  \\\n",
-       "HS3F_Euler_Avg     1.283   1.949    0.667    0.580    0.668    0.772    0.738   \n",
-       "CS3F_Euler_Avg     1.349   1.980    0.667    0.580    0.668    0.772    0.724   \n",
-       "HS3F_Rg4_Avg       1.233   1.903    0.667    0.592    0.672    0.772    0.741   \n",
-       "CS3F_Rg4_Avg       1.405   1.997    0.667    0.592    0.672    0.772    0.712   \n",
-       "Forest Flow_Avg    1.356   1.898    0.667    0.606    0.665    0.772    0.723   \n",
+       "                  W_train    W_test   R2_real   R2_fake   R2_comb   F1_real  \\\n",
+       "HS3F_Euler_Avg   1.282962  1.949359  0.666715  0.579684  0.667544  0.772106   \n",
+       "CS3F_Euler_Avg   1.348864  1.979609  0.666715  0.579684  0.667544  0.772106   \n",
+       "HS3F_Rg4_Avg     1.232536  1.903448  0.666715  0.591794  0.672308  0.772106   \n",
+       "CS3F_Rg4_Avg     1.405455  1.996807  0.666715  0.591794  0.672308  0.772106   \n",
+       "Forest Flow_Avg  1.355969  1.897578  0.666715  0.606008  0.664661  0.771905   \n",
        "\n",
-       "                 F1_comb  coverage_train  coverage_test      time  \n",
-       "HS3F_Euler_Avg     0.774           0.787          0.846   278.425  \n",
-       "CS3F_Euler_Avg     0.766           0.783          0.863   262.556  \n",
-       "HS3F_Rg4_Avg       0.773           0.819          0.861   331.058  \n",
-       "CS3F_Rg4_Avg       0.760           0.786          0.867   332.877  \n",
-       "Forest Flow_Avg    0.766           0.839          0.894  1073.766  "
+       "                  F1_fake   F1_comb  coverage_train  coverage_test  \\\n",
+       "HS3F_Euler_Avg   0.738038  0.774297        0.786984       0.846256   \n",
+       "CS3F_Euler_Avg   0.723865  0.765855        0.783463       0.863356   \n",
+       "HS3F_Rg4_Avg     0.740811  0.772581        0.819293       0.860820   \n",
+       "CS3F_Rg4_Avg     0.711943  0.759726        0.785699       0.866885   \n",
+       "Forest Flow_Avg  0.722838  0.766319        0.838825       0.894352   \n",
+       "\n",
+       "                        time  \n",
+       "HS3F_Euler_Avg    278.424878  \n",
+       "CS3F_Euler_Avg    262.555560  \n",
+       "HS3F_Rg4_Avg      331.058229  \n",
+       "CS3F_Rg4_Avg      332.876717  \n",
+       "Forest Flow_Avg  1073.765880  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,6 +763,17 @@
    ],
    "source": [
     "comp_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53a668fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1.404850- \n",
+    "& 1.997520 "
    ]
   },
   {
